2003-06-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela)
	<case R_PPC64_DTPREL64>: Don't segfault on undefined symbols.

2003-06-17  Paul Mackerras  <paulus@samba.org>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/makecontext.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/setcontext.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/ucontext_i.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/sys/ucontext.h: Adjust.

2003-06-17  Jakub Jelinek  <jakub@redhat.com>

	* posix/regcomp.c (build_word_op): Use alnum instead of alpha class.

2003-06-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/clock_nanosleep.c (clock_nanosleep): nanosleep
	takes care of enabling cancellation.

	* sysdeps/pthread/aio_suspend.c (aio_suspend): Make aio_suspend
	cancelable.  It's not correct to disable cancellation.  Instead of
	a cleanup handler.

	* sysdeps/unix/sysv/linux/sigtimedwait.c: If SIGCANCEL is defined
	and part of the incoming set, create a temporary set without this
	signal.
	* sysdeps/unix/sysv/linux/sigwait.c: Likewise.
	* sysdeps/unix/sysv/linux/sigwaitinfo.c: Likewise.

	* sysdeps/unix/sysv/linux/sleep.c: Use CANCELLATION_P if defined before
	returning because seconds==0.  Add __builtin_expect.

2003-06-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Add unwind information.

	* sysdeps/unix/sysv/linux/wait.c (__libc_wait): Fix type of result
	variable.

2003-06-16  Thorsten Kukuk  <kukuk@suse.de>

	* include/libc-symbols.h: Add static_link_warning macro.
	* grp/initgroups.c: Print linker warning if this function
	is called in a static linked binary.
	* nss/getXXbyYY.c: Likewise.
	* nss/getXXbyYY_r.c: Likewise.
	* nss/getXXent.c: Likewise.
	* nss/getXXent_r.c: Likewise.
	* sysdeps/posix/getaddrinfo.c: Likewise.
